<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/portrait">

        <TextView
            android:id="@+id/textView_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_wheel_width2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_wheel_offset2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_wheel_width2" />

        <Button
            android:id="@+id/button_decrease_width2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/decrease"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_decrease_offset2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_increase_width2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/increase"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_increase_offset2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_decrease_offset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/decrease"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_increase_offset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/increase"
            android:textColor="@color/buttonBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_wheel_width2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheel_width"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_wheel_offset2"
            app:layout_constraintEnd_toStartOf="@+id/button_increase_width2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_wheel_offset2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheel_diameter"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_increase_offset2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_inches2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inches"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_millimeters2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_decrease_width2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.487" />

        <TextView
            android:id="@+id/textView_millimeters2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/millimeters"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_decrease_offset2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCalculate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView_Fitment2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_measure2" />

        <Button
            android:id="@+id/button_measure2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/measuring"
            android:textColor="@color/buttonBackground"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_wheel_offset2" />

        <TextView
            android:id="@+id/textView_Fitment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_results"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_wheel_offset2" />

        <Button
            android:id="@+id/button_buy_link_tucked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/buy_link"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Fitment2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>